--- a/content/case_studies/employee-dashboard.mdx
+++ b/content/case_studies/employee-dashboard.mdx
@@ -44,7 +44,7 @@ Knowing the full redesign was going to be a huge commitment, we decided to de-ri
 </div>
 
 <div className="max-w-2xl">
-For that first phase, I made a few small, tactical changes that had a major impact. Adding a live counter to the Who’s In link in the main navigation increased clicks by 41%. Exposing the search bar by default led to a 211% increase in searches. And a new feature that prompted employees to share their booking details with coworkers was used more than 25,000 times in the first three months.
+For that first phase, I made a few small, tactical changes that had a major impact. Adding a live counter to the Who’s In link in the main navigation increased engagement by 41%. Exposing the search bar by default led to a 211% increase in searches. And a new feature that prompted employees to share their booking details with coworkers was used more than 25,000 times in the first three months.
 
 I also designed dual onboarding experiences; one to walk first-time users through the product, and another for existing users so they would not be caught off guard by the change.
 </div>
@@ -52,7 +52,7 @@ I also designed dual onboarding experiences; one to walk first-time users throug
 <div className="w-full max-w-[1000px] bg-amber-100 dark:bg-neutral-800 rounded-lg p-8 md:p-12 lg:p-16 mt-8 marker:text-yellow-400">
     <h2 className="max-w-2xl mx-auto mt-2!">Elevating User Voices</h2>
     <div className="max-w-2xl mx-auto">
-    Across both phases of this project, we conducted 6 separate research studies, both quantitative and qualitative, with over 300 participants, including existing OfficeSpace users and users who had never seen our product before. We also enrolled key clients in an Early Access Program and collaborated directly with them to dial in the final details before general release.
+    Across both phases of this project, we conducted 6 separate research studies, both quantitative and qualitative, with over 300 participants, including existing OfficeSpace users and users who had never seen our product before. We also enrolled key clients in an Early Access Program and collaborated directly with them to ensure there were no adoption barriers going into the general release.
 
     Our research findings informed changes to every iteration of the designs. Encouragingly, they also proved we were on the right track, as the new dashboard outperformed the existing homepage in every experiment, including subjective preference tests and objective usability studies.
     </div>
