Clean up case study template system

--- a/content/case_studies/smart-dog-collar.mdx
+++ b/content/case_studies/smart-dog-collar.mdx
@@ -10,13 +10,11 @@ unlisted: true
 related: "Designing for Emerging Technology"
 ---
 
-<div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-16 items-center max-w-none py-12 2xl:py-0">
 
 <ProblemStatement
     label
     headline="Dogs bark. And when they bark for hours at a time while you’re away from home, you need to know."
-    content="The product was straightforward—a corrective collar that delivers a tone or small static vibration in response to extended barking—but the UX for the app that controlled it was clouded by questions. I took on the task of creating a UI that was informative and trustworthy, while working with our researcher to ensure that the experience was sensitive to the varied needs of pet parents, as well as pets themselves.
-"
+    content="The product was straightforward—a corrective collar that delivers a tone or small static vibration in response to extended barking—but the UX for the app that controlled it was clouded by questions. I took on the task of creating a UI that was informative and trustworthy, while working with our researcher to ensure that the experience was sensitive to the varied needs of pet parents, as well as pets themselves."
 />
 
 <div className="max-w-2xl">
@@ -69,6 +67,4 @@ Along with incorporating the illustrations I mentioned earlier, I made a point o
 <figure className="my-0! mx-auto max-w-[1000px]">
 <Image src="/portfolio-assets/smart-collar-3.jpg" alt="Screenshots of the final designs showing a dashboard that tracks bark events." width={1000} height={705} quality="100" />
 </figure>
-</div>
-
 </div>
