--- a/content/case_studies/designing-for-emerging-technology.mdx
+++ b/content/case_studies/designing-for-emerging-technology.mdx
@@ -7,9 +7,8 @@ hero: "/portfolio-assets/prototyping-hero.jpg"
 thumbnail: "/portfolio-assets/thumbnail-prototyping.png"
 og: "/portfolio-assets/prototyping-og.jpg"
 unlisted: false
+related: "Designing for Scale"
 ---
-
-<div className="flex flex-col space-y-0 lg:space-y-12 xl:space-y-16 items-center max-w-none pb-12 2xl:py-0">
 
 <div className="max-w-2xl">
 ## Concepts like these are born out of simple questions that start with two words: "What if?"
@@ -83,5 +82,3 @@ What if you could see your woodworking project plans in 3D? As a hobbyist woodwo
     </div>
 </div>
 
-
-</div>
