Add interactive demo to design system case study

--- a/content/case_studies/designing-for-scale.mdx
+++ b/content/case_studies/designing-for-scale.mdx
@@ -36,20 +36,16 @@ The library soon branched into to a network of sub-libraries for different areas
 <div className="max-w-2xl">
 ## Bridging Figma and Code
 Around the same time, a new engineering team had been formed to build the framework that our design system would utilize. With my background in front-end development, I was able to help by preparing files for handoff, writing acceptance criteria, testing each component, and even pushing code changes myself.
+
+To ensure fidelity between Figma and code, I made sure (when possible) that the components in our design files shared the same property structure as their React counterparts. This made it easy for designers to understand how components would behave in the product, and faster for developers to translate designs into code.
 </div>
 
-<div className="text-center">
-<figure className="my-0! mx-auto max-w-[1000px]">
-<Image src="/portfolio-assets/design-systems-2.png" alt="A view comparing the similar structure of the same component in Figma and React." width={1000} height={500} quality="100" />
-<figcaption>
-I made sure that the components in Figma shared the same property structure as their counterparts in code, which means that any engineer can look at a Figma file and configure the components it’s built from with ease.
+<figure className="my-0! mx-auto w-full max-w-[1000px]">
+<DesignSystemDemo />
+<figcaption className="text-center">
+Interactive: Modify the properties in Figma (left) to see the changes reflected in code.
 </figcaption>
 </figure>
-</div>
-
-<div className="max-w-2xl">
-Together, we built a library of over 50 components in the first year. Now we were ready to build and launch the first set of pages in our new framework.
-</div>
 
 <div className="max-w-2xl">
 ## Optimizing for Adoption
