--- a/content/case_studies/designing-for-scale.mdx
+++ b/content/case_studies/designing-for-scale.mdx
@@ -43,7 +43,7 @@ To ensure fidelity between Figma and code, I made sure (when possible) that the 
 <figure className="my-0! mx-auto w-full max-w-[1000px]">
 <DesignSystemDemo />
 <figcaption className="text-center">
-Interactive: Modify the properties in Figma (left) to see the changes reflected in code.
+Interactive: Modify the properties in Figma to see the changes reflected in code.
 </figcaption>
 </figure>
 
