--- a/content/case_studies/designing-for-scale.mdx
+++ b/content/case_studies/designing-for-scale.mdx
@@ -30,7 +30,7 @@ Following atomic design standards, I started by defining our tokens: typography,
 </div>
 
 <div className="max-w-2xl">
-The library soon branched into to a network of sub-libraries for different areas of the product. Even before a single line of code had been written, we saw vast improvements in productivity and design cohesion across the team.
+The library soon branched into a network of sub-libraries for different areas of the product. Even before a single line of code had been written, we saw vast improvements in productivity and design cohesion across the team.
 </div>
 
 <div className="max-w-2xl">
@@ -51,7 +51,7 @@ Interactive: Modify the properties in Figma to see the changes reflected in code
 ## Optimizing for Adoption
 For a design system to take root, it needs more than a style guide and some component files. Every decision made along the way, beyond just those in static design artifacts, makes up its DNA, and that record needs to be captured, shared, and maintained over time.
 
-With that in mind, I created documentation for every component, as well as standards for things like forms, error messaging, loading states, and date formatting. To streamline adoption, I developed getting started guides that would enable other engineering teams to realize its value. We even gave it a name: Mariposa, Spanish for "butterfly."
+With that in mind, I created documentation for every component, as well as standards for things like forms, error messaging, loading states, and date formatting. To streamline adoption, I developed Getting Started guides that would enable other engineering teams to realize its value. We even gave it a name: Mariposa, Spanish for "butterfly."
 </div>
 
 <div className="text-center">
