--- a/content/case_studies/designing-for-good.mdx
+++ b/content/case_studies/designing-for-good.mdx
@@ -14,7 +14,7 @@ related: "Smart Dog Collar UI"
 <ProblemStatement
     label
     headline="When you’re faced with someone asking for help, the encounter can be stressful. You want to provide assistance, but a few dollars cash isn’t always the most effective solution."
-    content="The problems facing our our asset-deprived population are complex, and solving them is politically fraught. We narrowed our focus to the precise moment that you, the 'helper,' choose to give aid to someone on the street. Using your phone, you can tap into a network of rideshare apps, food delivery services, and local shelters to provide more worthwhile support in just a few taps."
+    content="The problems facing our asset-deprived population are complex, and solving them is politically fraught. We narrowed our focus to the precise moment that you, the 'helper,' choose to give aid to someone on the street. Using your phone, you can tap into a network of rideshare apps, food delivery services, and local shelters to provide more worthwhile support in just a few taps."
 />
 
 <div className="max-w-2xl">
