More portfolio tweaks

--- a/content/case_studies/designing-for-emerging-technology.mdx
+++ b/content/case_studies/designing-for-emerging-technology.mdx
@@ -2,7 +2,7 @@
 order: 3
 tag: "Prototyping"
 title: "Designing for Emerging Technology"
-summary: "Through a series of side projects, I’ve explored the future of UI beyond the screen, while learning AR, 3D modeling, and interaction design skills."
+summary: "Through a series of side projects, I’ve explored the future of UI beyond the screen at the intersection of augmented reality, 3D modeling, and interaction design."
 hero: "/portfolio-assets/prototyping-hero.jpg"
 thumbnail: "/portfolio-assets/thumbnail-prototyping.png"
 og: "/portfolio-assets/prototyping-og.jpg"
